# University

ComputerGraphics/L1/: makefile  run.sh
ComputerGraphics/L1/src/: SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  show_xmastree.cpp
ComputerGraphics/L2/agl-example/: AGL3-example.cpp  AGL3Drawable.hpp  AGL3Window.cpp  AGL3Window.hpp  Circle.cpp  Circle.hpp  CollisionChecker.cpp  CollisionChecker.hpp  Cross.cpp  Cross.hpp  Makefile  README  Triangle.cpp  Triangle.hpp
ComputerGraphics/L3/: AGL3Window.cpp  AGL3Window.hpp  Background.cpp  Background.hpp  Collision.cpp  Collision.hpp  Game.hpp  Makefile  README  Triangle.cpp  Triangle.hpp  TriangleInfo.hpp  lose.txt  main.cpp  run  win.txt
ComputerGraphics/L5/: BubbleFragmentShader.frag  BubbleVertexShader.vert  QubeFragmentShader.frag  QubeVertexShader.vert  camera.hpp  fragment.fs  main.cpp  makefile  prog_tutorial.cpp
ComputerGraphics/bubbles/: README.md  bubble.hpp  camera.hpp  main.cpp  makefile  mesh.cpp  model.hpp  settings.hpp  vertices_data.hpp
ComputerGraphics/map/: HGTreader.hpp  Map.hpp  README.md  aaa  camera.cpp  camera.hpp  definitions.hpp  main.cpp  makefile  settings.hpp  shader.cpp  shader.hpp  speed.hpp  sphere.hpp  tile.hpp
ComputerGraphics/model-viewer/: README.md  camera.cpp  camera.hpp  main.cpp  makefile  mesh.hpp  raw_object.cpp  raw_object.hpp  settings.hpp  shader.cpp  shader.hpp
SeminariumTestowanie/TDD/: CMakeLists.txt  README.md  TEST_test.cpp  main.cpp  run_tests.sh
SeminariumTestowanie/TDD/src/: Calculator.cpp  Calculator.hpp  Factorial.cpp  Factorial.hpp
(+21 files in other folders)
